<resources>
    <string name="app_name">Battery Tracker</string>
    <string name="start_service">Start Tracking</string>
    <string name="stop_service">Stop Tracking</string>
    <string name="service_running">Battery Tracker is running</string>
    <string name="service_description">Monitoring battery levels</string>
    <string name="sign_in_required">Google Sign-In required</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_failed">Sign-in failed</string>
    <string name="tracking_complete">10-hour tracking complete</string>
</resources> 