<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_required"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/status_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/status_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sheet_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Google Sheet ID:"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/sheet_id_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter Google Sheet ID"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/sheet_id_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/service_control_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Battery Tracking Service Control:"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/sheet_id_edittext"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/start_service_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:enabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/service_control_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stop_service_button"/>

    <Button
        android:id="@+id/stop_service_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:enabled="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/service_control_label"
        app:layout_constraintStart_toEndOf="@id/start_service_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="This app will monitor battery levels every second for 10 hours and sync the data to the specified Google Sheet."
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/start_service_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout> 